syntax = "proto3";

// This is a test comment on testobj
service Testobj {
	/* This is a test comment on func1 */
	rpc func1 (Msg1) returns (msg2) {}

	// This is a multiline test
	// Comment on func2
	rpc func2 (msg2) returns (Msg3) {}

	/* This is a different test
	comment on func3 */
	rpc func3 (Msg3) returns (Msg1) {}


	/* This is a different test
    	comment on func4 */
    	rpc func4 (Msg4) returns (Msg4) {}
}

/* This is a test comment shouldn't be included */
message Msg1 {
	string Name = 1;
	int32 id = 2;
	double floatingvalue = 3;
}

message msg2 {
	repeated string Liststring = 2;
	map<int32, string> Idtostringmap = 3;
}

message Msg3 {
	msg2 Nested = 1;
}

message Msg4 {
	bytes params  = 1;
}
